{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 4,
  "lineage": "0e954c4d-bb3f-4866-7aba-bcb5bf357a42",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:vpc/vpc-02f9f3b796d899d0d",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-012d0ddff02a6bcad",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-026e9c2f4e01a946d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02f9f3b796d899d0d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09694e31661de4880",
            "owner_id": "637423201723",
            "tags": {
              "Name": "default-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:security-group/sg-03e34e2972b075413",
            "description": "allow mysql traffic",
            "egress": [],
            "id": "sg-03e34e2972b075413",
            "ingress": [],
            "name": "mysql-sg",
            "name_prefix": "",
            "owner_id": "637423201723",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02f9f3b796d899d0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:security-group-rule/sgr-06fdb0c8ae764a43d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-06fdb0c8ae764a43d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03e34e2972b075413",
            "security_group_rule_id": "sgr-06fdb0c8ae764a43d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf_sg",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423201723:security-group-rule/sgr-042a347795f550adc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-042a347795f550adc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03e34e2972b075413",
            "security_group_rule_id": "sgr-042a347795f550adc",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf_sg",
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}